--- a/date/2024-11/page-2.htm
+++ b/date/2024-11/page-2.htm
@@ -274,8 +274,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-33473.htm">Python 路径处理(os.path模块)</a></h4>
-                <p>dest_file = r'D:\PythonProject\TestPython\test.py' # 实际存在 dest_fake_file = r'X:\PythonProject\TestPy</p>
+                <h4><a href="/news/article-27337.htm">领养宠物在哪里领养（领养宠物狗的地方在哪里）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈领养宠物在哪里领养，以及领养宠物狗的地方在哪里对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里有领养狗狗的?2、...        </p>
             </div>
         </div>
     </div>
@@ -284,8 +284,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-22-clash-node-daily-updates.htm">10月22日更新19.5M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、韩国、美国、加拿大、欧洲、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-18-node-share-links.htm">10月18日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、韩国、欧洲、美国、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -294,8 +294,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-27-free-clash-subscribe.htm">11月27日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、欧洲、韩国、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-3-free-v2ray.htm">12月3日更新20.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、新加坡、美国、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -304,8 +304,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19495.htm">小动物疫苗注射证明是疫苗本吗 动物疫苗注射证明怎么开</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于小动物疫苗注射证明是疫苗本吗的问题，于是小编就整理了2个相关介绍小动物疫苗注射证明是疫苗本吗的解答，让我们一起看看吧。宠物疫苗本</p>
+                <h4><a href="/free-nodes/2024-10-12-clash-windows.htm">10月12日更新22.4M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、韩国、新加坡、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -314,8 +314,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34904.htm">青浦二中高考成绩排名（青浦二中2020本科录取率）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈青浦二中高考成绩排名，以及青浦二中2020本科录取率对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、青浦二中历年分数线2、...     </p>
+                <h4><a href="/free-nodes/2024-12-5-free-node-subscribe-links.htm">12月5日更新20.5M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、日本、加拿大、香港、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -324,8 +324,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-7-clash-node.htm">1月7日更新23M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、新加坡、加拿大、韩国、欧洲、香港、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-37307.htm">动物疫苗注射部位图片高清（动物疫苗的使用方法及注意事项）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗注射部位图片高清的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打.</p>
             </div>
         </div>
     </div>
@@ -334,8 +334,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-28727.htm">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</a></h4>
-                <p>摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
+                <h4><a href="/free-nodes/2025-1-11-free-high-speed-nodes.htm">1月11日更新21.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、韩国、欧洲、香港、加拿大、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -344,8 +344,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-9-free-subscribe-node.htm">10月9日更新21.1M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、欧洲、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-36334.htm">匿名类（Anonymous Classes）</a></h4>
+                <p>匿名类 匿名类可以让代码更加简洁，因为它允许声明的同时实例化一个类。类似于局部类，只不过他们没有名字，当只需要一次局部类时，用匿名类更简洁。  匿名类的声明 局部类的声明是类的声明，但匿名类的声明是一</p>
             </div>
         </div>
     </div>
@@ -354,8 +354,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19039.htm">中国动物疫苗生产企业排名榜 中国动物疫苗生产企业排名榜最新</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于中国动物疫苗生产企业排名榜的问题，于是小编就整理了2个相关介绍中国动物疫苗生产企业排名榜的解答，让我们一起看看吧。辉瑞和科兴是哪</p>
+                <h4><a href="/free-nodes/2024-12-14-shadowrocket-node.htm">12月14日更新18.5M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、韩国、日本、美国、加拿大、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -364,8 +364,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-22-clash-node-daily-updates.htm">11月22日更新22.1M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、日本、美国、欧洲、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-15-clash-windows.htm">11月15日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、美国、欧洲、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -376,7 +376,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
