--- a/free-nodes/page-9.htm
+++ b/free-nodes/page-9.htm
@@ -93,6 +93,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-10-28">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-10-28-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/15f3c4212f40fda7ce92fc452dc790b7.webp" alt="10月28日更新18.6M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-10-28-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">10月28日更新18.6M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了新加坡、加拿大、香港、日本、美国、韩国、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                10月28日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-10-27">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -246,118 +263,11 @@
                                 10月19日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-10-18">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-10-18-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="10月18日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-10-18-node-share-links.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">10月18日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、日本、韩国、欧洲、美国、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                10月18日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-8.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="active"><span>9</span></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-10.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-24464.htm">VUE3 之 全局 Mixin 与 自定义属性合并策略 &#8211; 这个系列的教程通俗易懂，适合新手</a></h4>
-                <p>1. 概述 老话说的好：心态决定命运，好心态才能有好的命运。 言归正传，今天我们来聊聊 VUE 中的全局 Mixin 与 自定义属性合并策略。 2. Mixin 的使用 2.1 全局 Mixin &n</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-27-free-ssr-subscribe.htm">10月27日更新19.6M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、欧洲、香港、美国、新加坡、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-18878.htm">和田哪里有宠物店（和田卖宠物的地方）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈和田哪里有宠物店，以及和田卖宠物的地方对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、和田哪里有卖仓鼠的么2、...        本篇文</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-32519.htm">梦到抱别的女人什么意思周公解梦梦见蛇（梦见抱别人女人是什么）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈梦到抱别的女人什么意思周公解梦梦见蛇，以及梦见抱别人女人是什么对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、梦见女人抱着蛇的预兆... </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-28727.htm">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</a></h4>
-                <p>摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-18-node-share.htm">11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、韩国、美国、日本、欧洲、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-19952.htm">重庆宠物领养中心有哪些地址呢（重庆宠物领养重庆宠物赠送）</a></h4>
-                <p>摘要：       今天给各位分享重庆宠物领养中心有哪些地址呢的知识，其中也会对重庆宠物领养重庆宠物赠送进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、重庆有.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-39275.htm">开宠物食品店赚钱吗 开宠物食品店赚钱吗现在</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于开宠物食品店赚钱吗的问题，于是小编就整理了3个相关介绍开宠物食品店赚钱吗的解答，让我们一起看看吧。宠物用品超市利润怎么样？宠物用</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-10-clash-node.htm">12月10日更新19.8M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、欧洲、加拿大、新加坡、韩国、美国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -368,13 +278,103 @@
         </div>
     </div>
 </div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-34428.htm">属马人养猫好吗（属马养猫好不好）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈属马人养猫好吗，以及属马养猫好不好对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、养猫最忌讳的一个生肖,什么属相不能养猫什么生肖的人不..</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-35377.htm">义乌领养宠物的地方 义乌领养宠物的地方在哪里</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于义乌领养宠物的地方的问题，于是小编就整理了1个相关介绍义乌领养宠物的地方的解答，让我们一起看看吧。陈江河 为什么 收养 邱岩？陈</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-31571.htm">如何在IDEA 中配置 Maven</a></h4>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Maven 是一个能使我们的java程序开发节省时间和精力，是开发变得相对简单，还能使开发规范化的工具。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-37307.htm">动物疫苗注射部位图片高清（动物疫苗的使用方法及注意事项）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗注射部位图片高清的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-36820.htm">动物医院实践心得体会怎么写范文四年级（动物医院实践个人总结）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院实践心得体会怎么写范文四年级，以及动物医院实践个人总结对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、医院志愿服务心得体会... </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-25011.htm">Logback及其MDC功能详解</a></h4>
+                <p>Logback日志系统是SLF4J的原生实现。同时，Logback也是Log4j的继任者，补全了Log4j的不足。 1.&nbsp;Logback的模块组成  logback-core，其他模块的功能</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-38288.htm">人和宠物打的狂犬疫苗一样吗 人和宠物打的狂犬疫苗一样吗多少钱</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于人和宠物打的狂犬疫苗一样吗的问题，于是小编就整理了4个相关介绍人和宠物打的狂犬疫苗一样吗的解答，让我们一起看看吧。狗打了狂犬疫苗</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-11-12-free-subscribe-node.htm">11月12日更新21.6M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、日本、香港、欧洲、韩国、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
