--- a/free-nodes/page-9.htm
+++ b/free-nodes/page-9.htm
@@ -93,6 +93,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-10-29">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-10-29-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="10月29日更新19.6M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-10-29-free-v2ray.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">10月29日更新19.6M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了新加坡、香港、加拿大、美国、日本、韩国、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                10月29日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-10-28">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -246,23 +263,6 @@
                                 10月20日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-10-19">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-10-19-free-ssr-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-10-19-free-ssr-node.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、新加坡、日本、加拿大、香港、韩国、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                10月19日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-8.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="active"><span>9</span></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-10.htm">&raquo;</a></li></ul>            </div>
@@ -272,8 +272,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-28-clash-windows.htm">11月28日更新19M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、日本、新加坡、美国、加拿大、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-26870.htm">宠物领养协议模板图片 宠物领养协议模板图片大全</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养协议模板图片的问题，于是小编就整理了3个相关介绍宠物领养协议模板图片的解答，让我们一起看看吧。领养猫捆绑合同有法律效应吗</p>
             </div>
         </div>
     </div>
@@ -282,8 +282,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34428.htm">属马人养猫好吗（属马养猫好不好）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈属马人养猫好吗，以及属马养猫好不好对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、养猫最忌讳的一个生肖,什么属相不能养猫什么生肖的人不..</p>
+                <h4><a href="/news/article-41263.htm">如何从AngularJS模板的HTML中调用encodeURIComponent？</a></h4>
+                <p>要创建一个调用encodeURIComponent的过滤器，以下是HTML- &lt;div&nbsp;ng-app&nbsp;=&nbsp;"app"&gt; &nbsp;&nbsp;&nbsp;&</p>
             </div>
         </div>
     </div>
@@ -292,8 +292,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-35377.htm">义乌领养宠物的地方 义乌领养宠物的地方在哪里</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于义乌领养宠物的地方的问题，于是小编就整理了1个相关介绍义乌领养宠物的地方的解答，让我们一起看看吧。陈江河 为什么 收养 邱岩？陈</p>
+                <h4><a href="/news/article-32519.htm">梦到抱别的女人什么意思周公解梦梦见蛇（梦见抱别人女人是什么）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈梦到抱别的女人什么意思周公解梦梦见蛇，以及梦见抱别人女人是什么对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、梦见女人抱着蛇的预兆... </p>
             </div>
         </div>
     </div>
@@ -302,8 +302,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-31093.htm">广州卖狗市场（广州卖狗狗批发市场）</a></h4>
+                <p>摘要：       今天给各位分享广州卖狗市场的知识，其中也会对广州卖狗狗批发市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、广州宠物市场在哪里?想买只串.</p>
             </div>
         </div>
     </div>
@@ -312,8 +312,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-31571.htm">如何在IDEA 中配置 Maven</a></h4>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Maven 是一个能使我们的java程序开发节省时间和精力，是开发变得相对简单，还能使开发规范化的工具。</p>
+                <h4><a href="/free-nodes/2024-12-20-free-ssr-subscribe.htm">12月20日更新22.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、香港、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -322,8 +322,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-37307.htm">动物疫苗注射部位图片高清（动物疫苗的使用方法及注意事项）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗注射部位图片高清的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打.</p>
+                <h4><a href="/news/article-25476.htm">动物疫苗批号查询网 动物疫苗批号查询网站官网入口</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗批号查询网的问题，于是小编就整理了2个相关介绍动物疫苗批号查询网的解答，让我们一起看看吧。接种证没有编号可以去哪里查询？</p>
             </div>
         </div>
     </div>
@@ -332,8 +332,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-36820.htm">动物医院实践心得体会怎么写范文四年级（动物医院实践个人总结）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物医院实践心得体会怎么写范文四年级，以及动物医院实践个人总结对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、医院志愿服务心得体会... </p>
+                <h4><a href="/free-nodes/2024-11-13-clash-node.htm">11月13日更新22.4M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、美国、韩国、日本等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -342,8 +342,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25011.htm">Logback及其MDC功能详解</a></h4>
-                <p>Logback日志系统是SLF4J的原生实现。同时，Logback也是Log4j的继任者，补全了Log4j的不足。 1.&nbsp;Logback的模块组成  logback-core，其他模块的功能</p>
+                <h4><a href="/free-nodes/2024-11-29-free-ssr-node.htm">11月29日更新20.2M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、新加坡、日本、欧洲、韩国、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -352,8 +352,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-38288.htm">人和宠物打的狂犬疫苗一样吗 人和宠物打的狂犬疫苗一样吗多少钱</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于人和宠物打的狂犬疫苗一样吗的问题，于是小编就整理了4个相关介绍人和宠物打的狂犬疫苗一样吗的解答，让我们一起看看吧。狗打了狂犬疫苗</p>
+                <h4><a href="/free-nodes/2024-12-6-free-node-subscribe-links.htm">12月6日更新19.7M/S，2024年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、新加坡、欧洲、加拿大、韩国、香港等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -362,8 +362,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-12-free-subscribe-node.htm">11月12日更新21.6M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、美国、日本、香港、欧洲、韩国、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-3-free-clash-subscribe.htm">11月3日更新19.7M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、香港、美国、新加坡、日本、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -374,7 +374,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
